--- a/amrutamtask_backend/package.json
+++ b/amrutamtask_backend/package.json
@@ -21,6 +21,8 @@
     "mongodb": "^6.1.0",
     "mongoose": "^7.6.3",
     "node-schedule": "^2.1.1",
-    "nodemon": "^3.0.1"
+    "nodemailer": "^6.9.7",
+    "nodemon": "^3.0.1",
+    "twilio": "^4.19.0"
   }
 }
